--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="row container">
             <div class="col">
-                <h1>Player 1 - 0</h1>
+                <h1>Player - <small>0</small></h1>
                 <div id="player-cards">
                     <img class="card" src="assets/cards/10C.png" />
                     <img class="card" src="assets/cards/10C.png" />
@@ -37,7 +37,7 @@
 
         <div class="row container">
             <div class="col">
-                <h1>Computer - 0</h1>
+                <h1>Computer - <small>0</small></h1>
                 <div id="player-cards">
                     <img class="card" src="assets/cards/10C.png" />
                     <img class="card" src="assets/cards/10C.png" />
